fix spacing

--- a/src/components/sidebar/right-sidebar/datepicker/DateSlider.css
+++ b/src/components/sidebar/right-sidebar/datepicker/DateSlider.css
@@ -107,11 +107,7 @@
     justify-content: space-between;
 }
 
-.float-right {
-    float: right;
-}
-
 .input-seperate {
-    width: 12ch;
+    width: 11ch;
     padding: 0 1px;
 }
